# SpaWebBuilder

./: .env.example  .gitignore  .replit  DEPLOYMENT_SOLUTIONS.md  DEPLOYMENT_SUMMARY.md  Dockerfile.backend  Dockerfile.frontend  FIXED_SUMMARY.md  INSTRUKCJE_RENDER_DEPLOYMENT.md  QUICK_DEPLOYMENT.md  QUICK_START.md  README.md  RENDER_DEPLOYMENT_BLUEPRINT.md  RENDER_DEPLOYMENT_GUIDE.md  Rozszerzona_tabela_opcji.csv  UPROSZCZONE_INSTRUKCJE.md  create_offer.sh  deploy-render.sh  deploy.sh  development_hosting_guide.md  docker-compose.yml  docker-local.sh  fix_and_deploy.sh  init-db.sql  main.py  nginx-proxy.conf  nginx.conf  package-lock.json  package.json  pyproject.toml  railway.yaml  render.yaml  requirements.txt  start.sh  test-deployment.sh  test_pdf.py  test_pdf.sh  token.txt
attached_assets/: Pasted-Zbuduj-profesjonalny-w-pe-ni-dzia-aj-cy-system-webowy-typu-SPA-Single-Page-Application-do-tworzen-1746287170520.txt
backend/: requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py  router.py
backend/app/models/: invoice.py  offer.py  option.py  user.py
backend/app/schemas/: auth.py  invoice.py  offer.py  option.py  user.py
backend/app/services/: auth.py  invoice.py  offer.py  pdf.py
backend/app/templates/: invoice_template.html  offer_template.html
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: _redirects
frontend/src/: App.tsx  fix-pdf-download.js  index.css  index.html  main.tsx
frontend/src/types/: index.ts  (+1 more)
replit_agent/: architecture.md
(+36 files in other folders)
